test/expected/declare_o_arrow_rk_pk.out
struct S; declare -> as operator (reference to S) returning pointer to S
         ^
10: error: member operator -> must have exactly 0 parameters
